--- a/antenne/img/capacitivoInduttivoDE.tex
+++ b/antenne/img/capacitivoInduttivoDE.tex
@@ -5,30 +5,37 @@
 % \usepackage{pgfplots}
 % \begin{document}
 \begin{tikzpicture}\begin{axis}[axis lines=middle,samples=200
-        ,xlabel=$\theta$
-        ,ymax=1.2
-        ,ymin=-1.2
-        ,xmin = -0.05
-        ,xmax = 3.5
-        ,every axis x label/.style={
-          at={(ticklabel* cs:1.05)},
-            anchor=west,
-          },
-        every axis y label/.style={
-          at={(ticklabel* cs:1.05)},
-            anchor=south,
-          },
-        ,xtick=data
-        ,xtick={-0.05,1.045,3.141592}
-        ,xticklabels={0,A,$\pi$}
-        ,ytick=data,
-        ,ytick={1,-1}
-        ,yticklabels={1,-1}
-        ,legend style={at={(axis cs:0.2,-0.5)},anchor=north west}
-        ]
-      \addplot[red,domain=0:3.141592] {sin(deg(x)};
-      \addplot[blue,domain=0:3.141592] {sin(deg(2*x))};
-      \addplot[gray,dotted,mark=none] coordinates {(1.045, 0) (1.045, 1)};
-      \legend{$sin(\theta$),$sin(2\theta$)}
+				,xlabel=$\theta$
+				,ymax = 0.8
+				,ymin =-1.8
+				,xmin =-0.05
+				,xmax = 3.5
+				,every axis x label/.style={
+					at={(ticklabel* cs:1.05)},
+					anchor=west,
+				},
+				every axis y label/.style={
+					at={(ticklabel* cs:2.05)},
+					anchor=north,
+				},
+				,xtick=data
+				,xtick={3.141592}
+				,xticklabels={$\pi$}
+				,xticklabel style={anchor=south}
+				,xticklabel shift=-4pt
+				,extra x ticks={1.11}
+				,extra x tick labels={$A$}
+				,ytick=data,
+				,ytick={0.001}
+				,yticklabels={0}
+				,legend style={at={(axis cs:1.5,-0.3)},anchor=north west}
+				]
+				\addplot[black,domain=0:3.141592,thick,color={rgb:red,1;green,2;blue,5}] {-sin(deg(x))^2 + sin(deg(2*x))};
+			\legend{$\Im[\P]$}
 \end{axis}\end{tikzpicture}
 % \end{document}
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../antenne"
+%%% End:
