Prima review del capitolo delle antenne fliformi
- aggiunto operatore cotangente al file master

--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -147,6 +147,7 @@
 
 \newcommand{\pvec}[1]{\ensuremath{\vec{#1}\mkern2mu\vphantom{#1}^\prime}}
 \newcommand{\rp}{\pvec{r}}
+\DeclareMathOperator{\ctg}{ctg}
 
 % Derivatives shortcut
 \newcommand{\deriv}[3][]{% \deriv[<order>]{<func>}{<var>}
