--- a/antenne/filiformi.tex
+++ b/antenne/filiformi.tex
@@ -1,246 +1,268 @@
 \chapter{Antenne filiformi}
-Dato $V^{\prime}$ il volume delle sorgenti, definiamo la
-distribuzione di corrente come
-\begin{equation}
-  \vec{J}(\vec{r^{\prime}})$ $\forall \vec{r^{\prime}}\in V^{\prime}
-\end{equation}
-Otteniamo quindi che il potenziale vettore magnetico risulta:
-\begin{esp*}
-  \vec{A}(\vec{r^{\prime}}) = \frac{\mu}{4\pi} \frac{e^{-\jmath\beta r}}{r} \int_{V^{\prime}} \vec{J}(\vec{r^{\prime}})e^{\jmath\beta r^{\prime}\cos (\Psi (\vec{r^{\prime}}))}d\vec{r^{\prime}}
-\end{esp*}
+
+Applichiamo ora quanto ricavato nel capitolo precedente allo studio di antenne composte da elementi filiformi.
 
 \section{Antenne rettilinee}
-Data l'equazione di propagazione di un'onda di tensione lungo una linea di trasmissione
-\begin{esp}\begin{cases}
-  V(z^{\prime})=V_+ e^{-\jmath\beta z^{\prime}} + V_- e^{\jmath\beta z^{\prime}}\\
-  I(z^{\prime})=I_+ e^{-\jmath\beta z^{\prime}} - I_- e^{\jmath\beta z^{\prime}}
-\end{cases}\end{esp}
-Possiamo vedere il carico $Z_L$ come un'impedenza puramente reale e infinita. In tal caso l'estremità della linea è un circuito aperto, ma il campo non si propaga in quanto il campo elettomagnetico si annulla in quanto le linee di campo uscenti da un filo rientrano nell'altro. Se però apriamo i due fili, il campo elettromagnetico non rimane confinato, ma si propagherà.
+Studiamo ora una linea di trasmissione bifilare. Essa è infatti analoga come distribuzione di corrente all'antenna filiforme lineare, ma risulta di più semplice studio.
 
-Possiamo notare l'analogia tra la tensione della linea: $V_+$ è l'onda trasmessa e $V_-$ quella riflessa con l'equazione per le onde piane.
+Il passaggio da una all'altra, con i relativi sistemi di riferimento, è presentato in \autoref{fig:linea_antenna_filiforme}.
 
-Nel caso di circuito aperto ($Z_L \to +\infty$) il coefficiente di riflessione risulta  $\rho = 1$.
-La corrente lungo la linea risulta:
+\begin{figure}[htp]
+	\centering
+	\includegraphics[]{img/linea_antenna_filiforme.pdf}
+	\caption{Schema di un antenna filiforme e della linea di trasmissione associata.}
+	\label{fig:linea_antenna_filiforme}
+\end{figure}
+
+Si può osservare come la linea presenta un circuito aperto ad una delle estremità: esso può essere modellizzato ponendo un carico $Z_L$ con impedenza puramente reale e infinita.
+
+Il campo elettrico non si propaga quindi nello spazio esterno al circuito: le sue linee di forza escono infatti da un filo e rientrano nell'altro.
+
+Se però apriamo i due fili, come in figura, il campo elettromagnetico non rimarrà confinato, non permettendo la chiusura delle linee di campo: ci sarà perciò irraggiamento, pur mantenendo una distribuzione di corrente simile.
+
+\bigbreak
+La propagazione di un'onda di tensione lungo la linea si può descrivere con queste leggi, che risultano, con le componenti progressiva e regressiva, analoghe a quelle delle onde piane.
+\begin{esp}\begin{dcases}
+	V(z^{\prime})=V_+ \, e^{-\jmath\beta z^{\prime}} + V_- \, e^{\jmath\beta z^{\prime}}\\
+	I(z^{\prime})=I_+ \, e^{-\jmath\beta z^{\prime}} - I_- \, e^{\jmath\beta z^{\prime}}
+\end{dcases}\end{esp}
+
+Nel caso di circuito aperto ($Z_L \to +\infty$) il coefficiente di riflessione risulta chiaramente $\rho = 1$, perciò le due onde progressiva e regressiva hanno uguale ampiezza.
+
+La corrente lungo la linea risulta quindi
+
+\begin{equation*}
+	I(z^{\prime})
+	= I_+(e^{-\jmath\beta z^{\prime}} - e^{\jmath\beta z^{\prime}})
+	= -2j \, I_+ \sin (\beta z^{\prime})
+\end{equation*}
+
+Individuiamo come condizione al contorno la corrente ai capi del generatore: è quindi possibile ricavare l'espressione generale per $I$.
+
 \begin{esp}\label{eq:I_fili}
-  I(z^{\prime}) &= I_+(e^{-\jmath\beta z^{\prime}} - e^{\jmath\beta z^{\prime}}) = -2j I_+ \sin (\beta z^{\prime}) \\
-  I(-L^{\prime})&=  I_A = +2j I_+ \sin (\beta L^{\prime}) \\
-  \implies & I_+ = \frac{I_A}{+2\jmath\sin (\beta L^{\prime})}\\
-  \implies & I(z^{\prime}) - \frac{I_A\cdot \sin (\beta z^{\prime})}{\sin (\beta L^{\prime})}  = - I_m \sin (\beta z^{\prime})
+	I(-L^{\prime})&=	I_A = +2j \, I_+ \sin (\beta L^{\prime}) \\
+	\implies & I_+ = \frac{I_A}{+2\jmath\sin (\beta L^{\prime})}\\
+	\implies & I(z^{\prime}) - \frac{I_A\, \sin (\beta z^{\prime})}{\sin (\beta L^{\prime})}	= - I_m \sin (\beta z^{\prime})
+\end{esp}
+dove $I_m = {I_A} / \sin (\beta L^{\prime})$ è la corrente massima.
+
+\bigbreak
+Possiamo agevolmente passare dal sistema di riferimento della linea a quello dell'antenna con questa trasformazione.
+\begin{equation}
+ \forall z \in [-L^{\prime}, L^{\prime}], \quad z^{\prime} = \left | z \right | - L^{\prime}
+\end{equation}
+
+L'equazione \eqref{eq:I_fili} si può quindi riscrivere, per $|z| \le L/2$, come
+\begin{esp}
+	I(z)
+	& = -I_m \, \sin (\beta \, (|z| - L^{\prime}))
+	= I_m \, \sin \left(
+		\beta \left(
+			\frac{L}{2} - |z|
+		\right)
+	\right) \\
+	& = I_A \,
+	\frac {\sin \left(
+		\beta \left(
+			\frac{L}{2} - |z|
+		\right)
+	\right)} {\sin \left( \beta \, \frac{L}{2}\right)}
 \end{esp}
 
-con $I_m = \frac{I_A}{\sin (\beta L^{\prime})}$\\
-Calcolando le correnti nei diversi punti dei due fili aperti, otteniamo le relazioni tra $z$ e $z^{\prime}$
-\begin{esp}&(1) \quad z \ge 0  \begin{cases}
-  z^{\prime} = z-L^{\prime} \implies z = 0 \\
-  z^{\prime} = 0 \implies z = L^{\prime} \\
-\end{cases} \\
-&(2) \quad z \le 0 \begin{cases}
-z^{\prime} = -L^{\prime} \implies z = 0\\
-z^{\prime} = 0 \implies z = -L^{\prime}
-\end{cases}
-\end{esp}
+Il modello della linea approssima molto bene la distribuzione di corrente dell'antenna, ma così non si può dire per l'impedenza.
 
-Possiamo quindi dividere i due casi $(1)$ e $(2)$ nel seguente modo:
-\begin{itemize}
-  \item in $(1)$  possiamo scrivere l'equivalenza $z^{\prime} = z-L^{\prime}$
-  \item in $(2)$  possiamo scrivere l'equivalenza $z^{\prime} = -z-L^{\prime}$
-\end{itemize}
-Ora possiamo scrivere una sola equazione, utilizzando questa sostituzione:
+Il suo valore nella linea è puramente immaginario (infatti essa non irradia) mentre sappiamo che un'antenna irradia solamente se $R_A \neq 0$.
 \begin{equation}
- \forall z \in [-L^{\prime};L^{\prime}] \implies z^{\prime} = \left | z \right | - L^{\prime}
+	Z(z^{\prime}) = \frac{V(z^{\prime})}{I(z^{\prime})} \propto \jmath \ctg( \beta z^{\prime})
 \end{equation}
 
-L'equazione \eqref{eq:I_fili} si può quindi riscrivere come:
-\begin{equation}
-  I(z)=-I_m sin \left[sin(\beta \cdot (|z| - L^{\prime}))\right] = I_m sin \left[sin\left(\beta \frac{L}{2}-\beta |z|\right)\right] ~ |z| \le \frac{L}{2}
-\end{equation}
-
-L'impedenza dell'antenna risulta quindi
-\begin{equation}
-  Z(z^{\prime}) = \frac{V(z^{\prime})}{I(z^{\prime})} \propto \jmath ctg( \beta z^{\prime})
-\end{equation}
-e la corrente massima
-\begin{equation}\label{eq:corrDE}
-  I_m = \frac{I_A}{sin\left(\beta \cdot \frac{L}{2}\right)}
-\end{equation}
-Che risulta essere sempre immaginaria. Poiché  non esiste alcuna impedenza puramente immaginaria nei casi reali, abbiamo commesso qualche errore di approssimazione. Normalmente si cerca di minimizzare il più possibile la resistenza nei fili che la compongono utilizzando materiali il più possibile conduttori
+$Z_A$ non potrà quindi essere ricavata con questa utile approssimazione, ma attraverso tecniche più complesse e precise.
 
 \section{Dipolo corto (o antenna corta)}
-Il dipolo corto è la realizzazione fisica più vicina al dipolo elementare e si basa sull'ipotesi che la lunghezza del dipolo dell'antenna sia inferiore alla lunghezza d'onda. Possiamo quindi scrivere questa relazione come
+
+Il dipolo corto è la realizzazione fisica più vicina al dipolo elementare.
+La sua lunghezza non è ovviamente infinitesima, ma solamente molto inferiore alla lunghezza d'onda della comunicazione.
+
+Data $L$ la lunghezza del dipolo, possiamo quindi scrivere questa proprietà come
 \begin{equation}
-  \beta L \ll 1 \Leftrightarrow \frac{2 \pi}{\lambda}L \ll 1 \implies L \ll \frac{\lambda}{2 \pi}
+	\beta L \ll 1
+	\Longleftrightarrow \frac{2 \pi}{\lambda} L \ll 1
+	\implies L \ll \frac{\lambda}{2 \pi}
 \end{equation}
 
-La corrente che scorre lungo il filo può essere scritta nel seguente modo:
-\begin{esp}
-  I(z) &= I_m \sin [\beta (\frac{L}{2} - \left | z \right |)] \\
-   &\approx I_m \beta (\frac{L}{2} - \left | z \right |) \cong \frac{I_A}{\frac{\beta L}{2}} \beta (\frac{L}{2} - \left | z \right |) \cong I_A(1-\frac{2 \left | z \right |}{L})
-\end{esp}
-dove tra il primo e il secondo passaggio è stata applicata l'approssimazione di Taylor.
-Possiamo inoltre scrivere che il vettore potenziale magnetico è:
-\begin{esp}
-  \vec{A}(\vec{r^{\prime}}) &= \frac{\mu}{4\pi} \frac{e^{-\jmath\beta r}}{r} \int_{\frac{-L}{2}}^{\frac{L}{2}} I(z^{\prime}) e^{\jmath\beta z^{\prime}\cos \Psi (z^{\prime})}dz^{\prime}\\
-  &\approx  \frac{\mu}{4\pi} \frac{e^{-\jmath\beta r}}{r} \int_{\frac{-L}{2}}^{\frac{L}{2}} I(z^{\prime})dz^{\prime} \\
-  &\approx \frac{\mu}{4\pi} \frac{e^{-\jmath\beta r}}{r} \int_{\frac{-L}{2}}^{\frac{L}{2}} I_A (1-\frac{2 \left | z \right |}{L}) dz^{\prime} \\
-  \int_{\frac{-L}{2}}^{\frac{L}{2}} I_A (1-\frac{2 \left | z \right |}{L}) dz^{\prime} \\
-  &=  I_A [\int_{\frac{-L}{2}}^{\frac{L}{2}}dz^{\prime}- \int_{0}^{\frac{L}{2}}\frac{2 z^{\prime}}{L}) dz^{\prime}+ \int_{-\frac{L}{2}}^{0}\frac{2 z^{\prime}}{L}) dz^{\prime}] \\
-  &= I_A [L-\frac{2}{L}\frac{(z^{\prime})^{2}}{2}  \mid_{0}^{L/2} + \frac{2}{L}\frac{(z^{\prime})^{2}}{2}  \mid_{-L/2}^{0}] \\
-  &= I_A [L-\frac{2}{L}\frac{L^2}{8} + \frac{2}{L}(-\frac{L^2}{8})]\\
-  &= I_A (L-\frac{L}{4}-\frac{L}{4}) = \frac{I_A L}{2}
-\end{esp}
-
-
-Quindi risulta che il potenziale vettore magnetico del dipolo corto sia
-\begin{esp}
-  \A(\r^{\prime}) &= \frac{\mu}{4\pi} \frac{e^{-j\beta r}}{r} \hat{z}\int_{\frac{-L}{2}}^{\frac{L}{2}} I(z')dz^\prime \\
-  &= \frac{\mu}{4\pi} \frac{e^{-j\beta r}}{r} \frac{I_A L}{2} \hat{z}
-\end{esp}
-
-% Confrontando con il dipolo elementare :
-%
-% DIPOLO ELEMENTARE : $\overline{A}(\overline{r'}) = \frac{\mu}{4\pi} \frac{e^{-j\beta r}}{r} I_A \hat{z} \Delta{z}$
-
-Considero il caso $r >> \lambda$ ($r > 5 \lambda$ per esempio) e $\Delta{z} \to L/2$
-
-In campo lontano, localmente, posso considerare piana un'onda sferica.
-
-CAMPO LONTANO ($r \gg \lambda$)
-
-In campo lontano i campi elettrico e megnetico per un dipolo corto risultano quindi :
-\begin{equation}
-\begin{cases}\overline{E} \approx \jmath \eta \frac{I_A}{2 \lambda} (\frac{L}{2}) \sin \theta \frac{e^{-j\beta r}}{r} \hat{\theta}\\
-\overline{H} \approx \jmath \frac{I_A}{2 \lambda} (\frac{L}{2}) \sin \theta \frac{e^{j\beta r}}{r} \hat{\theta}\end{cases}
+La distribuzione di corrente dell'antenna corta si può calcolare come
+\begin{equation} \label{eq:corrente_dipolo_corto}
+	I(z)
+	= I_A \,
+	\frac {\sin \left(
+		\beta \left(
+			\frac{L}{2} - |z|
+		\right)
+	\right)} {\sin \left( \beta \, \frac{L}{2}\right)}
+	\stackrel{(*)}{\simeq} I_A \,
+	\frac {\beta \left(
+			\frac{L}{2} - |z|
+		\right)} {\beta \, \frac{L}{2}}
+	= I_A \, \left(
+			1 - \frac{2 |z|}{L}
+	\right)
 \end{equation}
+dove in (*) è applicata l'approssimazione di Taylor, siccome $\beta L \ge \beta |z|$ è infinitesimo.
+
+Una volta ottenuta $I(z)$ è possibile applicare \autoref{eq:A_generico} per ottenere tutte le informazioni riguardo l'irraggiamento dell'antenna in campo lontano, a partire dal potenziale vettore magnetico.
+\begin{esp}
+	\vec{A}(\rp)
+	&= \frac{\mu}{4\pi} \,
+	\frac{\ejbr}{r} \,M(\theta, \phi) \\
+	&= \frac{\mu}{4\pi} \,
+	\frac{\ejbr}{r} \hhat{z} \int_{-\frac{L}{2}}^{\frac{L}{2}} I(z^\prime) e^{\jmath\beta z^\prime \cos (\phi (z^\prime))} \de z^{\prime} \\
+	&\stackrel{(1)}{\simeq} \frac{\mu}{4\pi} \frac{e^{-\jmath\beta r}}{r} \hhat{z} \int_{-\frac{L}{2}}^{\frac{L}{2}} I(z^{\prime})\de z^{\prime} \\
+	&\stackrel{(2)}{\simeq} \frac{\mu}{4\pi} \frac{e^{-\jmath\beta r}}{r} \hhat{z} \int_{-\frac{L}{2}}^{\frac{L}{2}} I_A \left(1-\frac{2 |z|}{L} \right) \de z^{\prime} \\
+\end{esp}
+dove in (1) il termine di fase si trascura, perché nel dipolo corto $\beta z^\prime \simeq 0$, mentre in (2) si applica l'approssimazione trovata in \autoref{eq:corrente_dipolo_corto}.
+
+L'ultimo termine si può calcolare come
+\begin{esp}
+	M(\theta, \phi)
+	& = \hhat{z} \int_{-\frac{L}{2}}^{\frac{L}{2}} I_A \left(1-\frac{2 |z|}{L} \right) \de z^{\prime} \\
+	& = I_A \left[
+		\int_{-\frac{L}{2}}^{\frac{L}{2}}\de z^{\prime} -
+		\frac{2}{L} \int_{0}^{\frac{L}{2}} z^\prime \de z^{\prime} +
+		\frac{2}{L} \int_{-\frac{L}{2}}^{\,0} z^{\prime} \de z^{\prime}
+	\right] \hhat{z}
+	= \frac{I_A\, L}{2} \hhat{z}
+\end{esp}
+
+Quindi il potenziale magnetico si semplifica a
+\begin{esp}
+	\A(\r^{\prime})
+	&= \frac{\mu}{4\pi} \frac{e^{-j\beta r}}{r} \hat{z}\int_{-\frac{L}{2}}^{\frac{L}{2}} I(z')dz^\prime \\
+	&= \frac{\mu}{4\pi} \frac{e^{-j\beta r}}{r} \frac{I_A \, L}{2} \hat{z}
+\end{esp}
+
+Questa espressione si differenzia da quella del dipolo elementare, dove manca il fattore 2 al denominatore.
+\begin{equation*}
+	\A(\r^{\prime})
+	= \frac{\mu}{4\pi}
+	\frac{e^{-j\beta r}}{r}
+	I_A \, \Delta z \hhat{z}
+\end{equation*}
+
+\bigbreak
+Come fatto per il dipolo elementare, sfruttiamo ora la conoscenza del potenziale vettore magnetico per ricavare campo elettrico e magnetico in campo lontano.
+Il procedimento risulta identico, eccetto il fattore 2, al caso elementare, perciò è qui omesso.
+
+\begin{equation}\begin{dcases}
+	E_\theta
+	\simeq \jmath \eta\,\frac{I}{2\lambda}\, \frac{L}{2} \, \frac{\ejbr}{r} \, \sin(\theta) \\
+	H_\theta
+	\simeq \jmath \,\frac{I}{2\lambda}\, \frac{L}{2} \, \frac{\ejbr}{r} \, \sin(\theta) \\
+\end{dcases}\end{equation}
 
 Di seguito vengono riportati alcuni parametri fondamerntali per il dipolo corto, partendo da quanto definito in sezione \ref{sec:paramAnt}.
 
-\paragraph{Pattern di radiazione in potenza}
-Per il dipolo corto si trova che
+\subsection{Parametri d'antenna}
+
+Per il dipolo corto si trova che, analogamente al dipolo elementare,
 \begin{equation}
 \left | F(\theta, \phi) \right |^2 = \left | \frac{E(r, \theta, \phi)}{E(r, \theta_{MAX}, \phi_{MAX})} \right |^2 = \sin^2\theta
 \end{equation}
-che è lo stesso risultato ottenuto con il dipolo elementare.
 
-Possiamo quindi confrontare le equazioni della potenza emessa e della resistenza di radiazione del dipolo elementare ( entrambe in [eq. \eqref{eq:pot-resRadDE}]) con quelle del dipolo corto, ossia:
+Possiamo inoltre ricavare le espressioni della potenza irradiata e della resistenza di radiazione, riprendendo i passaggi di \autoref{eq:pot-resRadDE}.
 
-\begin{equation}
+\begin{equation*}
 P = \frac{\pi}{3} \eta \left | I_A \right |^2 \left(\frac{L}{2 \lambda}\right)^2 = \frac{\pi}{12} \eta \left | I_A \right |^2 \left(\frac{L}{\lambda}\right)^2
-\end{equation}
-\begin{equation}
-R_r = \frac{2}{3} \frac{\pi}{4} \eta \left(\frac{L}{2 \lambda}\right)^2 = \frac{\pi}{6} \eta \left(\frac{L}{2 \lambda}\right)^2 = \frac{\pi}{6} 120 \pi  \left(\frac{L}{2 \lambda}\right)^2 = 20 (\pi)^2 \left(\frac{L}{2 \lambda}\right)^2
-\end{equation}
+\end{equation*}
+\begin{equation*}
+R_r = \frac{2}{3} \frac{\pi}{4} \eta \left(\frac{L}{2 \lambda}\right)^2 = \frac{\pi}{6} \eta \left(\frac{L}{2 \lambda}\right)^2 = \frac{\pi}{6} 120 \pi	 \left(\frac{L}{2 \lambda}\right)^2 = 20 (\pi)^2 \left(\frac{L}{2 \lambda}\right)^2
+\end{equation*}
 
-Gli altri parametri d'antenna nel caso del dipolo corto sono:
+Trattandosi di un oggetto filiforme, è possibile definire la \emph{resistenza per unità di lunghezza}.
+\begin{equation*}
+			r_f = \frac{R_s}{2 \pi a} = \frac{1}{2 \pi a} \sqrt{\frac{\pi f M }{\sigma}}
+		\end{equation*}
+
+\section{Dipolo a mezz'onda}
+
+Il dipolo a mezz'onda è un antenna filiforme nella quale ognuno dei due rami è lungo $L = \frac{\lambda}{4}$.
+
+Il suo campo elettrico del dipolo a mezz'onda può essere ricavato con lo stesso procedimento impiegato per il dipolo corto, dove però viene fatta cadere l'approssimazione $\beta \, L \simeq 0$.
+
+Il campo elettrico diventa quindi
+\begin{equation*}
+	\E
+	\simeq \jmath \frac{\eta}{2 \pi} \frac{\ejbr}{r} \frac{I_m \cos \left(\frac{\beta L}{2} \cos \theta \right) - \cos \left(\frac{\beta L}{2} \right)}{\sin \theta} \hth
+\end{equation*}
+
+In particolare, siccome $\frac{\beta L}{2} = \frac{\pi}{2}$, si ottiene
+
+\begin{equation}\begin{dcases}
+	\E \simeq \jmath \frac{\eta}{2 \pi} \frac{\ejbr}{r} \frac{I_m \cos \left(\frac{\pi}{2} \cos \theta \right)}{\sin \theta} \hth \\
+	\H \simeq \frac{E_{\theta}}{\eta} \hphi
+\end{dcases}\end{equation}
+
+\subsection{Parametri d'antenna}
+Ricaviamo ora i parametri d'antenna trovati sia per il dipolo elementare che per il dipolo corto, nel caso del dipolo a mezz'onda.
+
 \begin{itemize}
-  \item Resistenza per unità di lunghezza:
-    \begin{equation}
-      r_f = \frac{R_s}{2 \pi a} = \frac{1}{2 \pi a} \sqrt{\frac{\pi f M }{\sigma}}
-    \end{equation}
-  \item Efficienza d'antenna:
-    \begin{equation}
-      e_r = \frac{P}{P_{IN}} = \frac{P}{P + P_0} = \frac{R_r}{R_r + R_0}
-    \end{equation}
-  \item Guadagno:
-    \begin{equation}
-      G = e_r D = e_r \frac{U_m}{\frac{P}{4 \pi}}
-    \end{equation}
-  \item Corrente nel dipolo:
-    \begin{equation}
-      I(z) = I_m \sin [\beta (\frac{L}{2} - \left | z \right |)] con \left | z \right | \le \frac{L}{2} e I_m = \frac{I_A}{\sin (\frac{\beta L}{2})}
-    \end{equation}
+	\item Pattern di radiazione in campo
+	\begin{equation}
+		F(\theta, \Phi) = \frac{\cos \left(\frac{\pi}{2} \cos \theta \right)}{\sin \theta}
+	\end{equation}
 
-\end{itemize}
+	\item Pattern di radiazione in potenza
+	\begin{equation}
+		\left | F(\theta, \phi) \right |^2 = \left | \frac{E(r, \theta, \phi)}{E(r, \theta_{MAX}, \phi_{MAX})} \right |^2 = \frac{\cos^2 \left(\frac{\pi}{2} \cos \theta \right)}{\sin^2 \theta}
+		~~ \implies ~~
+		\theta_{MAX} = \frac{\pi}{2}
+	\end{equation}
 
-\subsection{Momento di dipolo equivalente}
-Calcoleremo ora il momento di dipolo equivalente nel caso del dipolo corto.
-\begin{esp}
-\M (\theta, \Phi) &= \int_{\frac{-L}{2}}^{\frac{L}{2}} \hz I_m \sin \left[\beta \left(\frac{L}{2} -  \left | z' \right |\right)\right] e^{-\jmath \beta z' \cos \theta} dz' \\
-&= [\dots] = \frac{\frac{2 I_m}{\beta} \cos \left(\frac{\beta L}{2} \cos \theta) \right) - \cos \left(\frac{\beta L}{2}\right)}{\sin^2 \theta} \hz
-\end{esp}
+	\item Vettore di Poynting
+	\begin{equation}
+		\P
+		= \int_{S(r)} \frac{\E \times \H^*}{2} \de S
+		= \int_{S(r)} \frac{\left | E_{\theta} \right |^2}{2 \eta} \de S \hhat{r}
+		= \ldots = \frac{C_{in} (2 \pi)}{8 \pi} \eta \left | I_m \right |^2 \hhat{r}
+	\end{equation}
+	con $C_{in}$ la funzione \emph{coseno integrale}.
+	Il valore approssimato del coseno integrale in $2\pi$ è $2,44$.
 
-I passaggi intermedi, ritenuti troppo difficili e di poco interesse, sono stati omessi ma sono presenti nel libro.
+	\item Resistenza di radiazione
 
-Il potenziale vettore magnetico si ricava dal momento di dipolo equivalente appena calcolato, in particolare si ha:
-\begin{equation}
-\A(\r) = \frac{\mu}{4\pi} \frac{\ejbr}{r} \M (\theta, \Phi)
-\end{equation}
+	Dalla sua definizione, $R_r$ si ricava come
+	\begin{esp*}
+		\Re [\P \cdot \hat{r}]
+		& = \frac{C_{in} (2 \pi)}{8 \pi} \eta \left | I_A \right |^2
+		= \frac{R_r \left | I_A \right |^2}{2} \\
+		R_r
+		& = \frac{C_{in} (2 \pi)}{4 \pi} \eta \simeq 73 \Omega
+	\end{esp*}
 
-Si ottiene quindi che il campo elettromagnetico si può scrivere come:
-\begin{equation}
-\begin{cases}\E = -j \omega \A \frac{\nabla(\diverg \A)}{j \omega \mu \epsilon} \\
-\H = \frac{1}{\mu} \rot \A \end{cases}
-\end{equation}
+	\item Direttività
+	\begin{esp}
+		D
+		& = \frac{4 \pi r^2 \, I(r, \theta_{MAX}, \phi_{MAX})}{P}
+		= \frac{4 \pi r^2 \frac{\left | E_{\theta} \right |^{2}_{MAX}}{2 \eta}}{P}
+		= \ldots = \\
+		&= \frac{4}{C_{in} (2 \pi)} = \frac{4}{2.44} \cong 1.63
+	\end{esp}
 
-In \textit{campo lontano}, possiamo applicare le approssimazioni viste per il dipolo elementare: tutti i rapporti in cui la distanza si trova al denominatore vengono approssimati. alla potenza di ordine uno:    $\left\{ \frac{1}{r}, \frac{1}{r^2},\frac{1}{r^3},.. \approx \frac{1}{r}\right\}$
+	\item Resistenza superficiale del filo
+	\begin{equation}
+		R_s = \sqrt{\frac{\pi f \mu_0}{\sigma}}
+	\end{equation}
 
-Quindi in campo lontano i due campi elettrici e magnetici risultano:
+	\item Resistenza per unità di lunghezza, dato $a$ il raggio del conduttore
+	\begin{equation}
+		r_f = \frac{R_s}{2\pi a}
+	\end{equation}
 
-\begin{equation}\begin{cases}
-  \E \approx \jmath \frac{\eta}{2 \pi} \frac{\ejbr}{r} \frac{I_m \cos \left(\frac{\beta L}{2} \cos \theta \right) - \cos \left(\frac{\beta L}{2} \right)}{\sin \theta} \hth \\
-  \H \approx \frac{E_{\theta}}{\eta} \hphi
-\end{cases}\end{equation}
-
-Essendo antenne filiformi non c'è la dipendenza da ???
-
-
-
-\section{Dipolo a mezz'onda (L = $\frac{\lambda}{2}$)}
-
-Il campo elettrico del dipolo a mezz'onda può essere ricavato da quelllo del dipolo corto. Si trova quindi che
-
-\begin{equation}
-\E \approx \jmath \frac{\eta}{2 \pi} \frac{\ejbr}{r} \frac{I_m \cos \left(\frac{\beta L}{2} \cos \theta \right) - \cos \left(\frac{\beta L}{2} \right)}{\sin \theta} \hat{\theta}
-\end{equation}
-
-inoltre, poiché $\frac{\beta L}{2} = \frac{2 \pi}{\lambda} \frac{\lambda}{4} = \frac{\pi}{2}$
-
-il campo elettrico e magnetico possono essere riscritti come :
-
-\begin{equation}\begin{cases}
-  \E \approx \jmath \frac{\eta}{2 \pi} \frac{\ejbr}{r} \frac{I_m \cos \left(\frac{\pi}{2} \cos \theta \right)}{\sin \theta} \hth \\
-  \H \approx \frac{E_{\theta}}{\eta} \hphi
-\end{cases}\end{equation}
-
-\subsection{Parametri d'antenna per il dipolo a mezz'onda}
-Ricaviamo ora i parametri d'antenna trovati sia per il dipolo elementare che per il dipolo corto, nel caso del dipolo a mezz'onda:
-\begin{itemize}
-  \item Pattern di radiazione in campo
-    \begin{equation}
-      F(\theta, \Phi) = \frac{\cos \left(\frac{\pi}{2} \cos \theta \right)}{\sin \theta}
-    \end{equation}
-
-  \item Pattern di radiazione in potenza
-    \begin{equation}
-      \left | F(\theta, \Phi) \right |^2 = \left | \frac{E(r, \theta, \Phi)}{E(r, \theta_{MAX}, \Phi_{MAX})} \right |^2 = \frac{\cos^2 \left(\frac{\pi}{2} \cos \theta \right)}{\sin^2 \theta} \to \theta_{MAX} = \frac{\pi}{2}
-    \end{equation}
-  \item Vettore di Poynting
-    \begin{equation}
-      \P = \int_{S(r)} \frac{\E X \H^*}{2} \r dS = \int_{S(r)} \frac{\left | E_{\theta} \right |^2}{2 \eta} dS  \stackrel{=}{\text{conti}} \frac{C_{in} (2 \pi)}{8 \pi} \eta \left | I_m \right |^2
-    \end{equation}
-    con $C_in$ coseno integrale. Il valore di del coseno integrale approssimato è $C_{in}(2 \pi) \approx 2,44$.
-    \item Resistenza di radiazione: \\
-      Scrivendo la potenza emessa come funzione della resistenza di radiazione e richiamando l'equazione della corrente massima nel dipolo equivalente [\eqref{eq:corrDE}] possiamo scrivere:
-      \begin{equation}
-        \frac{C_{in} (2 \pi)}{8 \pi} \eta \left | I_A \right |^2 = \frac{R_r \left | I_A \right |^2}{2} \to R_r = \frac{C_{in} (2 \pi)}{4 \pi} \eta \cong 73 \Omega
-      \end{equation}
-    \item Direttività:
-      \begin{esp}
-        D &= \frac{U_m}{\frac{P}{4 \pi}} = \frac{r^2 I (r, \theta_{MAX}, \phi_{MAX})}{\frac{P}{4 \pi}} = \frac{4 \pi r^2 \frac{\left | E_{\theta} \right |^{2}_{MAX}}{2 \eta}}{P} = \frac{4 \pi r^2 \frac{\eta^2}{4 \pi^2 r^2}\frac{\left |I_m \right |^{2}}{2 \eta}}{\frac{C_{in} (2 \pi)}{8 \pi} \eta \left |I_m \right |^{2}} \\
-        &= \frac{4}{C_in (2 \pi)} = \frac{4}{2.44} \cong 1.63
-      \end{esp}
-    \item Resistenza superficiale del filo:
-        \begin{equation}
-          R_s = \sqrt{\frac{\pi f \mu_0}{\sigma}}
-        \end{equation}
-    \item Resistenza del filo
-      \begin{equation}
-        r_f = \frac{R_s}{2\pi a}
-      \end{equation}
-      con $a$ il raggio del conduttore
-    \item Resistenza ohmica totale
-      \begin{equation}
-        R_o = \frac{2 P_0}{\left |I_A \right |^{2}} = \frac{2}{\left |I_A \right |^{2}} \int_{\frac{-L}{2}}^{\frac{L}{2}} r_f \frac{\left |I(z) \right |^{2}}{2}dz'
-      \end{equation}
+	\item Resistenza ohmica
+	\begin{equation}
+		R_o
+		= \frac{2 P_0}{\left |I_A \right |^{2}}
+		= \frac{2}{\left |I_A \right |^{2}} \int_{-\frac{L}{2}}^{\frac{L}{2}} r_f \frac{\left |I(z) \right |^{2}}{2} \de z^\prime
+	\end{equation}
 \end{itemize}
 
 \section{Antenne a lunghezza maggiore di $\frac{\lambda}{2}$}
@@ -249,9 +271,9 @@ Per le antenne filiformi con lunghezza superiore a mezza lunghezza d'onda si han
 \centering
 \begin{tabular}{cc}
 Lunghezza d'antenna(L) & Note\\
-$\frac{3}{4}\lambda$      & Non ha un'impedenza d'ingresso "standard"\\
-$\lambda$                 & $Z_A \to +\infty$. Difficile da adattare \\
-$>\lambda$                & \parbox{7cm}{Si introducono lobi secondari: l'antenna non irradia più come una sfera}
+$\frac{3}{4}\lambda$			& Non ha un'impedenza d'ingresso "standard"\\
+$\lambda$									& $Z_A \to +\infty$. Difficile da adattare \\
+$>\lambda$								& \parbox{7cm}{Si introducono lobi secondari: l'antenna non irradia più come una sfera}
 \end{tabular}
 \end{table}
 
@@ -259,12 +281,12 @@ $>\lambda$                & \parbox{7cm}{Si introducono lobi secondari: l'antenn
 Analizzeremo ora il caso di due antenne vicne ad una certa distanza d, di cui una attiva e una passiva.
 Prenderemo in esame due elementi con lunghezza $\lambda/2$, e la potenza risulterà quindi : $P_{\lambda/2}\propto \left | I_a \right |^2$ e $P_{\lambda/2}\propto (R_r)^{1/2}$.
 
-L'elemento a destra è attivo, con una corrente $I_1$ e un campo prodotto incidente  $E_i$ chiamato $E_{driver}$.
+L'elemento a destra è attivo, con una corrente $I_1$ e un campo prodotto incidente	$E_i$ chiamato $E_{driver}$.
 
 Il secondo elemento a sinistra è invece un elemento passivo, attraversato da una corrente indotta $I_2$ e con un campo elettrico parassita dello stesso modulo ma con segno opposto: $E_{parassita} = -E_i = -E_{driver}$.
 La distanza d è molto minore di $\lambda$ ($d<<\lambda$).
 
-I due elementi risultano quindi molto uguali e  molto vicini.
+I due elementi risultano quindi molto uguali e	molto vicini.
 La distanza può quindi essere impostata a $\lambda/4$, con d che è risulta paragonabile a $\lambda$.
 
 Calcoliamo ora $E_{parassita}$:
@@ -283,7 +305,7 @@ dove il primo termine proviene alla prima antenna (attiva) mentre il secondo ter
 Proseguendo:
 
 \begin{equation}
-E \propto E_{driver}\frac{\ejbr}{r} (1-e^{j\beta\frac{\lambda}{4}}e^{-\jmath\frac{\pi}{2}}) =  E_{driver}\frac{\ejbr}{r} (1-e^{-\jmath\pi}) = 2E_{driver}\frac{\ejbr}{r}
+E \propto E_{driver}\frac{\ejbr}{r} (1-e^{j\beta\frac{\lambda}{4}}e^{-\jmath\frac{\pi}{2}}) =	 E_{driver}\frac{\ejbr}{r} (1-e^{-\jmath\pi}) = 2E_{driver}\frac{\ejbr}{r}
 \end{equation}
 
 Il campo elettrico risulta quindi raddoppiato, e in questo caso si parla di interfernza costruttiva.
@@ -291,12 +313,12 @@ Il campo elettrico risulta quindi raddoppiato, e in questo caso si parla di inte
 Analizzando invece il caso di grande distanza a sinistra dell'elemnto passivo, il campo elettrico risulta:
 
 \begin{equation}
-E \propto E_{driver}\frac{\ejbr}{r}-E_{driver}\frac{e^{-\jmath\beta(r-\frac{\lambda}{4})}}{r}e^{-\jmath\frac{\pi}{2}} =  E_{driver}\frac{\ejbr}{r} (1-e^{-\jmath\frac{\pi}{2}}e^{\jmath\frac{\pi}{2}}) = 0
+E \propto E_{driver}\frac{\ejbr}{r}-E_{driver}\frac{e^{-\jmath\beta(r-\frac{\lambda}{4})}}{r}e^{-\jmath\frac{\pi}{2}} =	 E_{driver}\frac{\ejbr}{r} (1-e^{-\jmath\frac{\pi}{2}}e^{\jmath\frac{\pi}{2}}) = 0
 \end{equation}
 
 In questo caso quindi il campo elettrico risulta nullo e siamo in presenza di interferenza distreuttiva, e nel complesso in pratica è come se fossimo in presenza di un piano conduttore.
 
-Le due antenne (elemento passivo e attivo) possono anche essere ricondotte ad un doppio bipolo, ipotizzando per ciascuna una tensione V  e una corrente I in ingresso.
+Le due antenne (elemento passivo e attivo) possono anche essere ricondotte ad un doppio bipolo, ipotizzando per ciascuna una tensione V	 e una corrente I in ingresso.
 
 Questo doppio bipolo si può rappresentare con una matrice delle impedenze:
 
@@ -369,7 +391,7 @@ Nel caso di campo lontano ($r>>\lambda$) i due campi, elettrico e magnetico, ris
 
 \begin{equation}
 \begin{cases}
-\H \simeq H_{\theta} \hat{\theta} = \frac{\jmath \omega \mu I \Delta s}{4 \pi \eta}  \frac{\jmath \beta}{r} \sin (\theta) \ejbr \hat{\theta}  = -\frac{\omega \mu I \Delta s}{4 \pi \sqrt{\frac{\mu}{\epsilon}}}  \omega \sqrt{\mu \epsilon} \sin (\theta) \frac{\ejbr}{r} \hat{\theta} = -\frac{\pi I \Delta s}{\lambda^2} \sin (\theta) \frac{\ejbr}{r} \hat{\theta}  \\
+\H \simeq H_{\theta} \hat{\theta} = \frac{\jmath \omega \mu I \Delta s}{4 \pi \eta}	 \frac{\jmath \beta}{r} \sin (\theta) \ejbr \hat{\theta}	= -\frac{\omega \mu I \Delta s}{4 \pi \sqrt{\frac{\mu}{\epsilon}}}	\omega \sqrt{\mu \epsilon} \sin (\theta) \frac{\ejbr}{r} \hat{\theta} = -\frac{\pi I \Delta s}{\lambda^2} \sin (\theta) \frac{\ejbr}{r} \hat{\theta}	\\
 E_{\phi} = - \eta H_{\theta} \end{cases}
 \end{equation}
 
@@ -384,3 +406,8 @@ Anche la direttività risulta, proprio come il dipolo elementare, uguale a 1.5
 
 
 \section{Antenna a Banda Larga}
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "antenne"
+%%% End:
