--- a/antenne/filiformi.tex
+++ b/antenne/filiformi.tex
@@ -267,145 +267,202 @@ Ricaviamo ora i parametri d'antenna trovati sia per il dipolo elementare che per
 
 \section{Antenne a lunghezza maggiore di $\frac{\lambda}{2}$}
 Per le antenne filiformi con lunghezza superiore a mezza lunghezza d'onda si hanno le caratteristiche elencate nella seguente tabella.
+
 \begin{table}[hb!]
-\centering
-\begin{tabular}{cc}
-Lunghezza d'antenna(L) & Note\\
-$\frac{3}{4}\lambda$			& Non ha un'impedenza d'ingresso "standard"\\
-$\lambda$									& $Z_A \to +\infty$. Difficile da adattare \\
-$>\lambda$								& \parbox{7cm}{Si introducono lobi secondari: l'antenna non irradia più come una sfera}
-\end{tabular}
+	\centering
+	\begin{tabular}{cC{8cm}}
+		\toprule
+		Lunghezza d'antenna & Note\\
+		\midrule
+		 \vspace{2mm}
+		$\frac{3}{4}\lambda$ & non ha un'impedenza d'ingresso  ``standard'', ovvero compatibile con le linee più comuni \\ \vspace{2mm}
+		$\lambda$ & $Z_A \to +\infty$, quindi è difficile da adattare \\
+		$>\lambda$ & si introducono lobi secondari: l'antenna perde in direttività \\
+		\bottomrule
+	\end{tabular}
 \end{table}
 
 \section{Yagi-Uda}
-Analizzeremo ora il caso di due antenne vicne ad una certa distanza d, di cui una attiva e una passiva.
-Prenderemo in esame due elementi con lunghezza $\lambda/2$, e la potenza risulterà quindi : $P_{\lambda/2}\propto \left | I_a \right |^2$ e $P_{\lambda/2}\propto (R_r)^{1/2}$.
+Analizzeremo ora il caso di due antenne poste ad una certa distanza $d = \lambda / 4$, l'una attiva e l'altra passiva, come in \autoref{fig:yagi_uda_due_pezzi}.
 
-L'elemento a destra è attivo, con una corrente $I_1$ e un campo prodotto incidente	$E_i$ chiamato $E_{driver}$.
+I due elementi avranno lunghezza $\lambda/2$, per cui la potenza ai loro morsetti risulterà $P_{\lambda/2}\propto \left | I_a \right |^2$ per il trasmettitore e $P_{\lambda/2}\propto (R_r)^{1/2}$ per il ricevitore.
 
-Il secondo elemento a sinistra è invece un elemento passivo, attraversato da una corrente indotta $I_2$ e con un campo elettrico parassita dello stesso modulo ma con segno opposto: $E_{parassita} = -E_i = -E_{driver}$.
-La distanza d è molto minore di $\lambda$ ($d<<\lambda$).
+Il primo elemento produce un campo $\E_{driver}$ che incide sul secondo: esso per reazione produce un campo dello stesso modulo ma con segno opposto, chiamato $\E_{parassita} = -\E_{driver}$.
 
-I due elementi risultano quindi molto uguali e	molto vicini.
-La distanza può quindi essere impostata a $\lambda/4$, con d che è risulta paragonabile a $\lambda$.
+\begin{figure}[htp]
+	\centering
+	\includegraphics[]{img/yagi_uda_due_pezzi.pdf}
+	\caption{L'antenna attiva, in arancione, irradia un campo ``driver'' e aziona l'elemento passivo, in grigio.}
+	\label{fig:yagi_uda_due_pezzi}
+\end{figure}
 
-Calcoliamo ora $E_{parassita}$:
-
+Data la distanza $d$, possiamo valutare il modulo campo indotto nel secondo elemento come
 \begin{equation}
-E_{parassita} = -E_i = -E_{driver} e^{-\jmath \beta d} = -E_{driver} e^{-\jmath \frac{2 \pi}{\lambda} \frac{\lambda}{4}} = -E_{driver} e^{-\jmath \frac{\pi}{2}}
+	E_{parassita}
+	= -E_{driver} \,e^{-\jmath \beta d}
+	= -E_{driver} \,e^{-\jmath \frac{2 \pi}{\lambda} \frac{\lambda}{4}}
+	= -E_{driver} \, e^{-\jmath \frac{\pi}{2}}
 \end{equation}
 
-Calcoliamo ora il campo elettrico a grande distanza ($r>>\lambda$)a destra dell'elemento attivo.
+Osserviamo quindi come interagiscono le due antenne nel campo lontano, quindi per $r \gg \lambda$.
 
-\begin{equation}
-E \propto E_{driver}\frac{\ejbr}{r}-E_{driver}\frac{e^{\jmath\beta(r+\frac{\lambda}{4})}}{r}e^{-\jmath\frac{\pi}{2}}
-\end{equation}
-dove il primo termine proviene alla prima antenna (attiva) mentre il secondo termine dalla seconda natenna (passiva).
-
-Proseguendo:
-
-\begin{equation}
-E \propto E_{driver}\frac{\ejbr}{r} (1-e^{j\beta\frac{\lambda}{4}}e^{-\jmath\frac{\pi}{2}}) =	 E_{driver}\frac{\ejbr}{r} (1-e^{-\jmath\pi}) = 2E_{driver}\frac{\ejbr}{r}
-\end{equation}
+Poniamoci a \emph{sinistra} della coppia di antenne, secondo lo schema di \autoref{fig:yagi_uda_due_pezzi}, sommando il contributo dei due elementi.
+\begin{esp}
+	E
+	& \propto E_{driver}\frac{\ejbr}{r}
+	-E_{driver}
+	\frac {e^{\jmath\beta(r+\frac {\lambda} {4})}} {r}
+	\, e^{-\jmath\frac{\pi}{2}} \\
+	& = E_{driver} \frac{\ejbr}{r} (1-e^{j (\beta\frac{\lambda}{4} - \frac{\pi}{2})})
+	= E_{driver}\frac{\ejbr}{r} (1-e^{-\jmath\pi})
+	= 2E_{driver}\frac{\ejbr}{r}
+\end{esp}
 
 Il campo elettrico risulta quindi raddoppiato, e in questo caso si parla di interfernza costruttiva.
 
-Analizzando invece il caso di grande distanza a sinistra dell'elemnto passivo, il campo elettrico risulta:
+Analizzando invece il caso di grande distanza a \emph{destra} dell'elemento passivo, il campo elettrico risulta nullo: siamo infatti in presenza di interferenza distruttiva, che rende l'antenna equivalente ad un piano conduttore.
 
 \begin{equation}
-E \propto E_{driver}\frac{\ejbr}{r}-E_{driver}\frac{e^{-\jmath\beta(r-\frac{\lambda}{4})}}{r}e^{-\jmath\frac{\pi}{2}} =	 E_{driver}\frac{\ejbr}{r} (1-e^{-\jmath\frac{\pi}{2}}e^{\jmath\frac{\pi}{2}}) = 0
+	E
+	\propto E_{driver} \frac{\ejbr}{r}
+	- E_{driver} \frac{e^{-\jmath\beta(r-\frac{\lambda}{4})}}{r} e^{-\jmath\frac{\pi}{2}}
+	= E_{driver}\frac{\ejbr}{r} (1-e^{-\jmath\frac{\pi}{2}} e^{\jmath\frac{\pi}{2}})
+	= 0
 \end{equation}
 
-In questo caso quindi il campo elettrico risulta nullo e siamo in presenza di interferenza distreuttiva, e nel complesso in pratica è come se fossimo in presenza di un piano conduttore.
-
-Le due antenne (elemento passivo e attivo) possono anche essere ricondotte ad un doppio bipolo, ipotizzando per ciascuna una tensione V	 e una corrente I in ingresso.
-
-Questo doppio bipolo si può rappresentare con una matrice delle impedenze:
+Le due antenne possono essere viste come un doppio bipolo elettrico, definendo per ciascuna una tensione ai capi $V$ e una corrente in ingresso $I$, legate da una matrice di impedenze.
 
 \begin{equation}
-\left( \begin{array}{c}
-V_1 \\
-V_2 \end{array} \right)
-=
-\left( \begin{array}{cc}
-Z_{11} & Z_{12} \\
-Z_{21} & Z_{22} \end{array} \right)
-\left( \begin{array}{cc}
-I_1 \\
-I_2 \end{array} \right)
+	\left(
+		\begin{array}{c}
+			V_1 \\
+			V_2
+		\end{array}
+	\right)
+	= \left(
+		\begin{array}{cc}
+			Z_{11} & Z_{12} \\
+			Z_{21} & Z_{22}
+		\end{array}
+	\right)
+	\left(
+		\begin{array}{cc}
+			I_1 \\
+			I_2
+		\end{array}
+	\right)
 \end{equation}
 
-e quindi il potenziale risulta:
-
+Nel componente passivo, vale quindi che
 \begin{equation}
-V_2 = Z_{21}I_1+Z_{22}I_2 = 0
-\end{equation}
-con $Z_{22} = Z_{12}$ e $Z_{21}$ che è definita come la transimpedenza.
-
-mentre la corrente risulta:
-
-\begin{equation}
-I_2 = -I_1 \frac{Z_{21}}{Z_{22}}
+	\begin{dcases}
+		V_2 = Z_{21}I_1+Z_{22}I_2 = 0 \\
+		I_2 = -I_1 \frac{Z_{21}}{Z_{22}}
+	\end{dcases}
 \end{equation}
 
-Nel caso reale:
+% TODO: chiarire: non si capisce nulla
+% Nel caso reale:
 
-nel caso d = 0, la parte reale di $Z_{21}$ è $73\omega$, mentre nel caso $d = 0.15 \lambda$, la parte reale di $Z_{21}$ risulta $63\omega$. Facendi i calcoli con questa ultima distanza, ci si accorge che la corrente $I_{2}$ è circa ddel 10\% (0.89) più bassa di $I_{1}$.
+% nel caso d = 0, la parte reale di $Z_{21}$ è $73\omega$, mentre nel caso $d = 0.15 \lambda$, la parte reale di $Z_{21}$ risulta $63\omega$. Facendi i calcoli con questa ultima distanza, ci si accorge che la corrente $I_{2}$ è circa ddel 10\% (0.89) più bassa di $I_{1}$.
 
-...Disegni su campo elettrico in condizioni reali...
+% ...Disegni su campo elettrico in condizioni reali...
 
 \clearpage
+\section{Dipolo Magnetico elementare}
 
-\section{Antenna a Spira (Elementare) - Dipolo Magnetico}
+Il dipolo magnetico è il duale del dipolo elettrico, ed è composto da una spira infinitesima di lunghezza $\Delta s$ percorsa da una corrente $I$.
 
-Può essere pensato come il duale del Dipolo Elementare (Dipolo Elettrico)
+Lo studio è analogo a quello del dipolo elettrico, con le dovute sostituzioni riportate nella \autoref{tab:dipolo_elettrico_magnetico}.
 
-\begin{equation}
-\begin{tabular}{|l|c|r|}
-\hline
-Dipolo elettrico & Dipolo magnetico \\
-\hline
-$E_{\theta}$, $E_{r}$ & $H_{\theta}$, $H_{r}$ \\
-\hline
-$H_{\phi}$ & $-E_{\phi}$ \\
-\hline
-$I \Delta z$ & $I^{(m)} \Delta z$ \\
-\hline
-$\eta$ & $\frac{1}{\eta}$ \\
-\hline
-\end{tabular}
-\end{equation}
+\begin{table}[h]
+	\centering
+	\begin{tabular}{cc}
+		\toprule
+		Dipolo elettrico & Dipolo magnetico \\
+		\midrule
+		$E_{\theta}$, $E_{r}$ & $H_{\theta}$, $H_{r}$ \\
+		$H_{\phi}$ & $-E_{\phi}$ \\
+		$I \Delta z$ & $I^{(m)} \Delta z =  \jmath \omega \mu I \Delta s$ \\
+		$\eta$ & $\frac{1}{\eta}$ \\
+		\bottomrule
+	\end{tabular}
+	\caption{Tabella di conversione tra i due dipoli. $I^{(m)}$ nel dipolo magnetico è la corrente magnetica equivalente, definita per simmetria.}
+	\label{tab:dipolo_elettrico_magnetico}
+\end{table}
 
-I campi elettrico e magnetico possono quindi essere scritti come :
-
-\begin{equation}
-\begin{cases}
-\H = \frac{I^{(m)} \Delta z}{4 \pi \eta} \left( \frac{\jmath \beta}{r} + \frac{1}{r^2} + \frac{1}{\jmath \beta r^3} \right) \sin (\theta) \ejbr \hat{\theta} + \frac{I^{(m)} \Delta z}{2 \pi \eta} \left(\frac{1}{r^2} + \frac{1}{\jmath \beta r^3} \right) \cos (\theta) \ejbr \hat{r} \\
-\E = - \frac{I^{(m)} \Delta z}{4 \pi} \left( \frac{\jmath \beta}{r} + \frac{1}{r^2} + \frac{1}{\jmath \beta r^3} \right) \sin (\theta) \ejbr \hat{\phi} \end{cases}
-\end{equation}
-
-
-con $I^{(m)} \Delta z = \jmath \omega \mu I \Delta s$ e $f^2 \mu \epsilon = \frac{1}{\lambda^2}$
-
-Nel caso di campo lontano ($r>>\lambda$) i due campi, elettrico e magnetico, risultano essere :
+I campi elettrico e magnetico possono essere quindi scritti come
 
 \begin{equation}
-\begin{cases}
-\H \simeq H_{\theta} \hat{\theta} = \frac{\jmath \omega \mu I \Delta s}{4 \pi \eta}	 \frac{\jmath \beta}{r} \sin (\theta) \ejbr \hat{\theta}	= -\frac{\omega \mu I \Delta s}{4 \pi \sqrt{\frac{\mu}{\epsilon}}}	\omega \sqrt{\mu \epsilon} \sin (\theta) \frac{\ejbr}{r} \hat{\theta} = -\frac{\pi I \Delta s}{\lambda^2} \sin (\theta) \frac{\ejbr}{r} \hat{\theta}	\\
-E_{\phi} = - \eta H_{\theta} \end{cases}
+	\begin{dcases}
+		\H
+		= \frac{I^{(m)} \Delta z}{4 \pi \eta}
+		\left(
+			\frac{\jmath \beta}{r} + \frac{1}{r^2}
+			+ \frac{1}{\jmath \beta r^3}
+		\right)
+		\sin (\theta) \, \ejbr \hth
+		+ \frac{I^{(m)} \Delta z}{2 \pi \eta}
+		\left(
+			\frac{1}{r^2} + \frac{1}{\jmath \beta r^3}
+		\right)
+		\cos (\theta) \, \ejbr \hr \\
+		\E
+		= - \frac{I^{(m)} \Delta z}{4 \pi}
+		\left(
+			\frac{\jmath \beta}{r}
+			+ \frac{1}{r^2}
+			+ \frac{1}{\jmath \beta r^3}
+		\right)
+		\sin (\theta) \, \ejbr \hphi
+	\end{dcases}
+\end{equation}
+con $I^{(m)} \Delta z = \jmath \omega \mu I \Delta s$.
+
+Nel caso di campo lontano ($r \gg \lambda$) i due campi, elettrico e magnetico, si semplificano come segue
+\begin{equation}
+	\begin{cases}
+		\begin{split}
+			\H
+			\simeq H_{\theta} \hth
+			& = \frac{\jmath \omega \mu I \Delta s}{4 \pi \eta} \frac{\jmath \beta}{r} \sin (\theta) \, \ejbr \hth
+			= -\frac{\omega \mu I \Delta s}{4 \pi \sqrt{\frac{\mu}{\epsilon}}}
+			\, \omega \sqrt{\mu \epsilon} \sin (\theta)
+			\, \frac{\ejbr}{r} \hth \\
+			& = -\frac{\pi I \Delta s}{\lambda^2} \sin (\theta)\, \frac{\ejbr}{r} \hth
+		\end{split} \\
+		E_{\phi} = - \eta H_{\theta}
+	\end{cases}
 \end{equation}
 
-Per quanto riguarda il pattern di radiazione, esso risulta uguale a quello del dipolo elementare:
+Il pattern di radiazione invece risulta uguale a quello del dipolo elementare, così come la direttività, sempre pari a $1.5$.
 
 \begin{equation}
-F(\theta, \phi) = \frac{E(r, \theta, \phi)}{E(r, \theta_{MAX}, \phi_{MAX})} = \sin(\theta)
+	F(\theta, \phi)
+	= \frac{E(r, \theta, \phi)}{E(r, \theta_{MAX}, \phi_{MAX})} = \sin(\theta)
 \end{equation}
 
-Anche la direttività risulta, proprio come il dipolo elementare, uguale a 1.5
+La potenza in uscita si rivela essere
+\begin{equation*}
+	P
+	= \Re \left[
+		\int_{S(r)} \frac{\E \times \H^*}{2}
+	\right]
+	= \ldots
+	= 10 |I|^2 \, \left(
+		\frac{4\pi^2 \Delta s}{\lambda^2}
+	\right)^2
+	= \frac{1}{2} |I|^2 R_r
+\end{equation*}
+dove si è ricavata anche la resistenza di radiazione $R_r$.
 
-
+Come per il dipolo elementare elettrico, anche qui l'antenna risulta di difficile utilizzo, sia in termini di potenza irradiata che di adattabilità alla linea.
 
 \section{Antenna a Banda Larga}
+% TODO: mettere giù per bene
+- elica, come schiera fasata di spire lunghe $2\pi b$
+- antenna biconica
+- antenna log-periodica, composta da segmenti con frequenze in progressione geometrica
 
 %%% Local Variables:
 %%% mode: latex
