Finita la review, anche del capitolo patch
- spostata IFA nel capitolo delle antenne sul piano di massa
- aggiunte figure per patch quadrata e ifa
- piccole correzioni alle altre figure
- corretta l'esposizione per le patch
- migliore scrittura delle formule

--- a/antenne/antenneSuPianoCond.tex
+++ b/antenne/antenneSuPianoCond.tex
@@ -122,6 +122,16 @@ Quindi abbiamo ottenuto che
 
 Le antenna a dipolo possono essere modificate anche in altri modi, per esempio nel caso in cui si voglia avere un'antenna più capacitiva si può mettere, al posto del ramo parallelo al PEC, un disco fatto con un buon conduttore.
 
+\section{IFA - Inverted F antenna}
+
+Le antenne IFA sono spesso usate nei cellulari in quanto la loro struttura è semplice, come si può vedere in \autoref{fig:ifa}.
+Vengono utilizzate spesso negli smartphone in quanto permettono di sfruttare tutti gli spazi lasciati vuoti dalle altre componenti e sono antenne non molto direttive.
+\begin{figure}[htp]
+	\includegraphics{img/ifa.pdf}
+	\caption{Antenna IFA. La versione specchiata sul piano è resa in grigio.}
+	\label{fig:ifa}
+\end{figure}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "antenne"
