minor fixes on typo

--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -4,7 +4,7 @@
 \usepackage[T1]{fontenc}
 
 \usepackage[utf8]{inputenc}
-\usepackage{textgreek}
+% \usepackage{textgreek}
 \usepackage{fancyhdr} % headers and footers
 
 % figures and positioning
